fix spacing of line and buttons on for physicians page

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -1129,7 +1129,7 @@ a.collapsible:focus {
   .online-form {
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: space-between;
     margin: 3em;
     width: 40%;
     min-width: 280px;
